diverse andere modifikationen

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # --- SQL-Skript Initialisierung ---
+# Legt den neuen Ort für das Daten-Initialisierungs-Skript fest.
+spring.sql.init.data-locations=classpath:DB/data.sql
 # Stellt sicher, dass data.sql NACH der Erstellung der Tabellen durch Hibernate ausgeführt wird.
 spring.jpa.defer-datasource-initialization=true
 # Stellt sicher, dass die SQL-Skripte immer ausgeführt werden.
