Bessere Strutktur durch bessere Namensgebeung Boardgenerierung auf dem Server angefangen createInitialState state in BoardSolverService erfolgreich getestet

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,9 +9,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # --- JPA / Hibernate Konfiguration für die Entwicklung ---
-# 'create-drop' löscht die Datenbank bei jedem Neustart und erstellt sie neu.
-# Perfekt für die Entwicklung, um immer einen sauberen Zustand zu haben.
-spring.jpa.hibernate.ddl-auto=create-drop
+# 'update' versucht, das Schema anzupassen, anstatt es zu löschen.
+spring.jpa.hibernate.ddl-auto=update
 
 # --- SQL-Skript Initialisierung ---
 # Legt den neuen Ort für das Daten-Initialisierungs-Skript fest.
