DB auf file based umgestellt, server berechnet nach sever start automatisch 20 lösbare Boardkonstelationen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.profiles.active=dev
 
 # --- Datenbank-Konfiguration (Basis) ---
 # Die Verbindungs-URL zu unserer In-Memory H2-Datenbank für die Entwicklung.
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./DB/gamedb
 # Standard-Benutzername für die H2-Datenbank.
 spring.datasource.username=sa
 # Standard-Passwort für H2 (leer).
